<resources>
    <string name="app_name">APEX</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_hint">Deal Title</string>
    <string name="price_hint">Price (numbers only)</string>
    <string name="description_hint">Description</string>
    <string name="save_menu">save</string>
    <string name="delete_deal">Delete Deal</string>


    <string name="backbutton">Are you sure,want to Exit from App?</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_dialog">No</string>
    <string name="logo">logo</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="already_have_an_account_sign_in">Have an account?</string>
    <string name="gender">GENDER</string>
    <string name="nationality">NATIONALITY</string>
    <string name="state">STATE</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="full_name">FULL NAME</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_accept_all_the_terms_and_condition_given">I accept all the TERMS AND CONDITION given.</string>
    <string name="don_t_have_an_account_sign_up">SIGN UP</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="all_right_reserved">All right reserved</string>
    <string name="copyright_classico_computers">Copyright Classico Computers.</string>
    <string name="glad_to_see_you">GLAD TO SEE YOU</string>
    <string name="welcome">WELCOME</string>
    <string name="geometry_algebra_equations">Geometry, Algebra, Equations</string>
    <string name="about">About</string>
    <string name="about_content">APEX is an online E-learning application, developed by the Google Africa Developer Scholarship 2020 Students under mobile-edu-18.</string>
</resources>