<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_middle" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:scaleType="fitXY"
        android:src="@drawable/apex_logo" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_medium"
        android:gravity="center"
        android:text="Learn From Home"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_xxxlarge"
        android:layout_weight=""/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="66dp"
        app:cardCornerRadius="30dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                tools:srcCompat="@drawable/apex_google" />

            <View
                android:id="@+id/divider"
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sign in with Google"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_mlarge" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="66dp"
        app:cardCornerRadius="30dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                tools:srcCompat="@drawable/apex_facebook" />

            <View
                android:id="@+id/divider2"
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sign in with Facebook"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_mlarge" />

    <Button
        android:id="@+id/loginBtnSignUp"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:background="@drawable/btn_rounded_primary"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/letting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:textSize="7pt"
            android:layout_marginEnd="4dp"
            android:text="@string/already_have_an_account_sign_in"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/txtLoginSignupPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:textSize="7pt"
            android:text="@string/sign_in"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/red_500" />

    </LinearLayout>


</LinearLayout>