<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:scaleType="fitXY"
        android:src="@drawable/apex_logo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_medium"
        android:gravity="center"
        android:text="CREATE YOUR PROFILE"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHighlight="@color/colorPrimaryLight"
        android:textColorHint="@color/white"
        android:textColorLink="@color/colorPrimaryLight"
        android:theme="@style/EditText.Blue" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:maxLength="50"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:theme="@style/EditText.Blue" />



<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--        android:id="@+id/editLoginConfirmPssword"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="-4dp"-->
<!--        android:layout_marginRight="-4dp"-->
<!--        android:hint="Confirm Pssword"-->
<!--        android:inputType="textPassword|numberPassword"-->
<!--        android:maxLength="50"-->
<!--        android:maxLines="1"-->
<!--        android:singleLine="true"-->
<!--        android:textColor="@color/white"-->
<!--        android:textColorHint="@color/white"-->
<!--        android:theme="@style/EditText.Blue" />-->



    <Button
        android:id="@+id/loginBtnSignIn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:background="@drawable/btn_rounded_primary"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/letting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:textSize="7pt"
            android:layout_marginEnd="4dp"
            android:text="@string/already_have_an_account_sign_in"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtLoginSignupPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:textSize="7pt"
            android:text="@string/sign_in"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/red_500" />

    </LinearLayout>


</LinearLayout>